# korupsinlp

./: .gitignore  CLAUDE.md  EKSEKUSI_KEADILAN_NUSANTARA.md  HANDOFF.md  MANIFESTO_KEADILAN_NUSANTARA.md  README.md  pyproject.toml
.claude/: settings.local.json
autoresearch/: __init__.py  analyze_results.py  cv_analysis.py  feature_importance.py  prepare.py  program.md  results.tsv  train.py
reports/: analysis_summary.json  feasibility_report.md  paper1_draft.md  paper1_outline.md  paper2_cover_letter.docx  paper2_cover_letter.md  paper2_draft.docx  paper2_draft.md  paper2_outline.md  paper2_submission_metadata.md  paper2_supplementary.docx  paper2_supplementary.md  regression_results.json  session11_findings.md
reports/corpus_release/: DATASHEET.md  corpus_statistics.md  data_dictionary.json  korpuskorupsi_v1.csv  korpuskorupsi_v1.json  summary.json
scripts/: 01_test_connection.py  02_scrape_sample.py  03_parse_sample.py  04_feasibility_report.py  05_validate_golden.py  06_statistical_analysis.py  07_regression_analysis.py  08_export_corpus.py  09_extract_pertimbangan.py  10_batch_scrape_global.py  10_import_corpus_csv.py  11_paper2_analysis.py  11_rescrape_pdfs.py  download_pdfs.py
src/: config.py  db.py
src/analysis/: feasibility.py
src/parser/: fields.py  normalizer.py  pipeline.py
src/scraper/: base.py  detail.py  listing.py  pdf_extractor.py
tests/: test_autoresearch.py  test_parser.py
tests/fixtures/: sample_verdict_metadata.json  sample_verdict_text.txt
